--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             let ques = randomint() + "*" + randomint();
             let user = prompt(ques + "값은 얼마입니까?", 0);
             if(user == null) {
-                document.write("구구단 연습을 종료합니다<br>");
+                document.write("구구단 연습을 종료합니다<br>"); break ;
                 }
             else{
                 let ans = eval(ques);
